test/type/wrong/open3.kk
type open test {
  X
}
  
type extend test {
  X
}   